--- a/ChemicalTools/rdkit/rdkit_test.ipynb
+++ b/ChemicalTools/rdkit/rdkit_test.ipynb
@@ -7154,11 +7154,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "280c4353f727e671cf05ba4d7720342cfccac67fca3ccb6b5efd424634687d2b"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.3 64-bit ('env_combs': conda)",
+   "display_name": "Python 3.8.3 ('env_conda')",
    "language": "python",
    "name": "python3"
   },
@@ -7174,7 +7171,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.3"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "1ff84c85b4cb7d42b8298eb298dc3721a6504f0ce451c03eb78556b83302c957"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
